# weather_homework

./: README.md  pyproject.toml
docker/: docker-compose.yml
tests/: test_functions.py  test_ingest.py  test_weather_homework.py
weather_homework/: __init__.py  data_quality.ipynb  etl_functions.py  etl_pressure.py  etl_temperatures.py  ingest.py  schemas.py
