[tool.poetry]
name = "weather_homework"
version = "0.1.0"
description = "quick demo of sample weather data presentation"
authors = ["Piotr Szełemej <piotr.szelemej@mail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
requests = "^2.28.1"
pyspark = "^3.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyter = "^1.0.0"
scipy = "^1.9.0"
pandas-profiling = "^3.2.0"
pytest-mock = "^3.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
